--- a/mybatisProxyDao/pom.xml
+++ b/mybatisProxyDao/pom.xml
@@ -9,9 +9,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>mybatisDemo</artifactId>
+    <artifactId>mybatisProxyDao</artifactId>
 
-    <name>mybatisDemo</name>
-
+    <name>mybatisProxyDao</name>
 
 </project>
